tests/lean/ex2.lean.expected.out
  Set: pp::colors
  Set: pp::unicode
⊤
  Set: lean::pp::notation
and ⊤ ⊥
  Set: pp::unicode
and true false
  Assumed: a
Error (line: 8, pos: 0) invalid object declaration, environment already has an object named 'a'
  Assumed: b
and a b
  Assumed: A
Error (line: 12, pos: 11) type mismatch at application
    and a A
Function type:
    Bool -> Bool -> Bool
Arguments types:
    a : Bool
    A : Type
variable A : Type
(lean::pp::notation := false, pp::unicode := false, pp::colors := false)
Error (line: 15, pos: 12) unknown option 'lean::p::notation', type 'Help Options.' for list of available options
Error (line: 16, pos: 31) invalid option value, given option is not an integer
  Set: lean::pp::notation
a /\ b
