tests/lean/ex2.lean
-- comment
print true
set::option lean::pp::notation false
print true && false
set::option pp::unicode false
print true && false
variable a : Bool
variable a : Bool
variable b : Bool
print a && b
variable A : Type
check a && A
print environment 1
print options
set::option lean::p::notation true
set::option lean::pp::notation 10
set::option lean::pp::notation true
print a && b
